# rasberry

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  package.xml.orig  patches.conf  releaser_history.json  setup.py  tracks.yaml
config/: actors_AB.yaml  costmap_common_params.yaml  detectors.yaml  local_costmap_params.yaml  map_config_default.yaml  map_config_norway_poles_sim.yaml  map_config_riseholme.yaml  map_config_sim_riseholme.yaml  models_AB.yaml  norway_odom_ekf.yaml  polytunnel_des_config.yaml  robot_005.yaml  robot_007.yaml
config/certs/: rasberry.crt  rasberry.key
config/dwa/: dwa_move_base_params.yaml  dwa_planner_ros.yaml
config/gazebo/: models_AB.yaml
debian/: changelog  control  gbp.conf  rules
launch/: actor_move_base_dwa.launch  actor_move_base_teb.launch  actor_movebase.launch  amcl.launch  coordination.launch  gazebo_single.launch  hokuyo.launch  human_aware_navigation.launch  include_actors.launch  move_base_eband.launch  move_base_seq.launch  move_base_teb.launch  move_base_teb_multisim.launch  navsat_transform_2_gps.launch  polypoles.launch  rasberry_simulation_velo_k2.launch  robot_bringup.launch  spawn_actor.launch  thorvald_world_AB.launch  topological_map_manager_central.launch  topological_navigation_robot.launch  uv_switch.launch  world.launch  xsens_driver.launch
maps/: empty_world.yaml  enclosure.pgm  fork_map.yaml  norway_poles.pgm  norway_poles.tmap  norway_poles.yaml  norway_poles_no_go.pgm  open_field.tmap  polytunnel.tmap  polytunnel.yaml  riseholme-uv.tmap  riseholme-uv_sim.tmap  riseholme.pgm  riseholme.tmap  riseholme_no_go.pgm  riseholme_no_go.yaml  riseholme_sim.pgm  riseholme_sim.tmap  riseholme_sim_no_go.yaml  riseholme_sim_no_go_old.yaml  riseholme_sim_old.tmap
models/fhs_floor/: model.sdf
models/food_handling_shed/: model.config
models/grass_ground_plane/: model-1_4.sdf
models/riseholme_enclosure/: model.config  model.sdf
plugins/: CMakeLists.txt
rasberry/: CHANGELOG.rst  package.xml
rasberry_actors/: CHANGELOG.rst  CMakeLists.txt  package.xml
rasberry_actors/config/: costmap_common_params.yaml  global_costmap_params.yaml
rasberry_actors/launch/: move_base.launch  spawn_actor.launch
rasberry_actors/maps/: empty.yaml
rasberry_actors/urdf/: actor.xacro
rasberry_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
rasberry_bringup/config/: robot_003.yaml  robot_006.yaml
rasberry_bringup/launch/: people_perception_sensors.launch  rasberry_simulation.launch  rasberry_simulation_velo_k2.launch  robot_bringup_multisim.launch
rasberry_bringup/resources/: topological_navigation.rviz
rasberry_bringup/scripts/: start_sim.sh  start_sim_norway_poles_robot_5.sh  start_sim_riseholme_unified.sh
rasberry_bringup/tmule/: rasberry-server.yaml  riseholme-uv.yaml
rasberry_bringup/urdf/: robot_005_sensors.xacro  robot_006_sensors.xacro  robot_007_sensors.xacro
rasberry_coordination/: CMakeLists.txt  README.md  setup.py
rasberry_coordination/action/: CollectTray.action
rasberry_coordination/config/: map_config_norway_poles.yaml
rasberry_coordination/launch/: robot_websocket_action_adapter.launch  robot_websocket_adapter.launch  robot_websocket_toponav_adapter.launch
rasberry_coordination/msg/: TaskUpdates.msg
rasberry_coordination/srv/: RobotState.srv
rasberry_des/: CHANGELOG.rst  README.md  package.xml  setup.py
rasberry_des/config/: des_config.yaml  open_field_des_config.yaml  (+1 more)
rasberry_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rasberry_move_base/: CMakeLists.txt
rasberry_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
rasberry_uv/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
resources/: topological_navigation.rviz  topological_navigation_norway_poles.rviz  topological_navigation_riseholme.rviz
scripts/: add_edges_between_nodes.py  add_polytunnelB_topo_nodes.py  add_to_world.py  center_polytunnelA_topo_nodes.py  centres_polytunnelA.txt  centres_polytunnelA_sim.txt  centres_polytunnelB.txt  check_des_config_parameters.py  check_des_fork_map_config_parameters.py  delete_topo_nodes.py  des.py  fork_map_generator.py  gazebo_people_tracker.py  generate_poses.py  generate_world.py  goal_publisher.py  move_base_seq.py  polytunnelB_pole_positions.txt  simple_task_executor_node.py  start_mapping.sh  start_multisim.sh  start_sim.sh  start_sim_norway_poles_robot_3.sh  start_sim_norway_poles_robot_3_sim.sh  start_sim_norway_poles_robot_5_sim.sh  start_sim_norway_poles_server.sh  start_sim_norway_poles_unified.sh  utils.py
srv/: RobotStates.srv
tmule/: HOME.rasberryrc.example  nmbu_poles.sh  rasberry-robot.yaml  rasberry-sensor.yaml  riseholme-uv.sh  riseholme.sh  sim_riseholme-uv.sh  sim_riseholme.sh  thorvald_006.sh  thorvald_007.sh
topoNav_testcase/: navigation_testcase.py  testcase.launch
urdf/: actor_laser.xacro  robot_003_sensors.xacro  robot_003_sim_sensors.xacro
worlds/: empty.world  enclosure.world
(+107 files in other folders)
