<?xml version="1.0"?>
<package format="2">
  <name>rasberry_move_base</name>
  <version>0.1.0</version>
  <description>The rasberry_move_base package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jpulidofentanes@lincoln.ac.uk">Jaime Pulido Fentanes</maintainer>

  <license>MIT</license>


  <!-- <url type="website">http://wiki.ros.org/rasberry_move_base</url> -->

  <!-- Example: -->
  <author email="jpulidofentanes@lincoln.ac.uk">Jaime Pulido Fentanes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>amcl</build_depend>
  <build_depend>dwa_local_planner</build_depend>
  <build_depend>eband_local_planner</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>robot_pose_publisher</build_depend>
  <build_depend>teb_local_planner</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>eband_local_planner</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>robot_pose_publisher</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>tf</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
